tests/ui/associated-consts/associated-const-impl-wrong-lifetime.stderr
error[E0308]: const not compatible with trait
  --> $DIR/associated-const-impl-wrong-lifetime.rs:7:5
   |
LL |     const NAME: &'a str = "unit";
   |     ^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected reference `&'static _`
              found reference `&'a _`
note: the lifetime `'a` as defined here...
  --> $DIR/associated-const-impl-wrong-lifetime.rs:6:6
   |
LL | impl<'a> Foo for &'a () {
   |      ^^
   = note: ...does not necessarily outlive the static lifetime

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
